--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -27,7 +27,7 @@
         android:layout_margin="@dimen/padding"
         android:gravity="start"
         android:orientation="horizontal"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/logo"
         app:layout_constraintTop_toTopOf="@+id/logo">
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:text="@string/translator"
-            android:textColor="@color/primary"
+            android:textColor="@color/black"
             android:textSize="@dimen/_18sdp"
             android:textStyle="bold" />
 
