--- a/app/src/main/res/layout/email_us_dialog.xml
+++ b/app/src/main/res/layout/email_us_dialog.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/feedback"
-        android:textColor="?attr/colorOnPrimary"
+        android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
