--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -28,7 +28,7 @@
             android:layout_gravity="center"
             android:layout_marginHorizontal="@dimen/less_padding"
             app:srcCompat="@drawable/ic_baseline_navigate_next_24"
-            app:tint="?attr/colorOnPrimary" />
+            app:tint="@color/black" />
 
         <TextView
             android:id="@+id/tvLngToHistory"
@@ -69,7 +69,7 @@
                 android:id="@+id/tvTranslationHistory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="?attr/colorOnPrimary"
+                android:textColor="@color/black"
                 android:paddingStart="@dimen/padding_10"
                 android:textSize="16sp"
                 android:paddingTop="10dp"
