--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -18,7 +18,7 @@
             android:id="@+id/expandedListTVText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="?attr/colorOnPrimary"
+            android:textColor="@color/black"
             android:paddingStart="@dimen/padding_10"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -34,7 +34,7 @@
                 android:id="@+id/expandedListTVTranslation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="?attr/colorOnPrimary"
+                android:textColor="@color/black"
                 android:paddingStart="@dimen/padding_10"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp" />
