--- a/app/src/main/res/layout/rate_us_dialog_box.xml
+++ b/app/src/main/res/layout/rate_us_dialog_box.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/rate_us"
-        android:textColor="?attr/colorOnPrimary"
+        android:textColor="@color/black"
         android:textSize="30sp"
         android:gravity="center"
         android:textStyle="bold"
