Added Translator Pro & EnableKeyboardActivity.kt

--- a/app/src/main/res/drawable/ads_bg.xml
+++ b/app/src/main/res/drawable/ads_bg.xml
@@ -4,6 +4,6 @@
     tools:ignore="MissingDefaultResource">
 
     <corners android:radius="@dimen/_5sdp" />
-    <solid android:color="?attr/colorPrimary" />
+    <solid android:color="#f5f6fb" />
 
 </shape>
