--- a/app/src/main/res/drawable-v21/bg_main_less_rounded.xml
+++ b/app/src/main/res/drawable-v21/bg_main_less_rounded.xml
@@ -10,7 +10,7 @@
 
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/colorPrimary" />
+            <solid android:color="#f5f6fb" />
             <corners android:radius="7sp" />
         </shape>
     </item>
