--- a/app/src/main/res/drawable-v21/bg_plain_less_rounded.xml
+++ b/app/src/main/res/drawable-v21/bg_plain_less_rounded.xml
@@ -1,24 +1,19 @@
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<shape xmlns:android="http://schemas.android.com/apk/res/android">-->
-<!--    <solid android:color="#f5f6fb" />-->
-<!--    <corners android:radius="50dp" />-->
-<!--</shape>-->
-
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:color="@color/gray_700"
     tools:targetApi="lollipop">
+
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <solid android:color="@color/gray_700" />
-            <corners android:radius="50dp"/>
+            <corners android:radius="10sp"/>
         </shape>
     </item>
     <item
         android:id="@android:id/background" >
         <shape android:shape="rectangle">
-            <solid android:color="#f5f6fb"/>
-            <corners android:radius="50dp"/>
+            <solid android:color="@color/white"/>
+            <corners android:radius="10sp"/>
         </shape>
     </item>
 </ripple>
