--- a/app/src/main/res/drawable/bg_bottom_left_rounded.xml
+++ b/app/src/main/res/drawable/bg_bottom_left_rounded.xml
@@ -9,7 +9,7 @@
     </item>
     <item android:left="@dimen/border_width" android:bottom="@dimen/border_width">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/colorPrimary" />
+            <solid android:color="#f5f6fb" />
             <corners android:bottomLeftRadius="@dimen/padding_10"/>
         </shape>
     </item>
