--- a/app/src/main/res/drawable/bg_puzzle_char.xml
+++ b/app/src/main/res/drawable/bg_puzzle_char.xml
@@ -8,7 +8,7 @@
     </item>
     <item android:id="@android:id/background">
         <shape>
-            <solid android:color="?attr/colorPrimary" />
+            <solid android:color="#f5f6fb" />
             <stroke
                 android:width="3dp"
                 android:color="@color/accent" />
