--- a/app/src/main/res/drawable/bg_top_rounded_border.xml
+++ b/app/src/main/res/drawable/bg_top_rounded_border.xml
@@ -10,7 +10,7 @@
 <!--    </item>-->
     <item android:left="@dimen/border_width" android:right="@dimen/border_width" android:top="@dimen/border_width">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/colorPrimary" />
+            <solid android:color="#f5f6fb" />
             <corners android:topRightRadius="@dimen/padding_10"
                 android:topLeftRadius="@dimen/padding_10"/>
         </shape>
