--- a/app/src/main/res/drawable/ripple_effect_rounded.xml
+++ b/app/src/main/res/drawable/ripple_effect_rounded.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@android:id/background" >
         <shape android:shape="rectangle">
-            <solid android:color="?attr/colorPrimary"/>
+            <solid android:color="#f5f6fb"/>
             <corners android:radius="50dp"/>
         </shape>
     </item>
