--- a/app/src/main/res/layout/activity_display_history.xml
+++ b/app/src/main/res/layout/activity_display_history.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:background="?attr/colorPrimary"
+            android:background="#f5f6fb"
             android:elevation="@dimen/padding_10"
             android:orientation="horizontal"
             android:animateLayoutChanges="true"
