--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true"
-            android:background="?attr/colorPrimary"
+            android:background="#f5f6fb"
             android:elevation="@dimen/padding_10"
             android:gravity="center"
             android:orientation="horizontal"
