--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
-        android:background="?attr/colorPrimary"
+        android:background="#f5f6fb"
         android:elevation="@dimen/padding_10"
         android:gravity="center"
         android:orientation="horizontal"
@@ -52,7 +52,7 @@
             android:padding="@dimen/padding"
             android:visibility="invisible"
             app:srcCompat="@drawable/ic_baseline_arrow_back_24"
-            app:tint="?attr/colorPrimary" />
+            app:tint="#f5f6fb" />
 
     </LinearLayout>
 
@@ -125,10 +125,10 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/padding_10"
                     android:rotation="180"
-                    app:srcCompat="@drawable/ic_baseline_share_24"
-                    app:tint="@color/gray_700" />
+                    app:tint="@color/gray_700"
+                    android:layout_marginEnd="@dimen/padding_10"
+                    app:srcCompat="@drawable/ic_baseline_share_24" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -301,6 +301,7 @@
                 android:drawableStart="@drawable/ic_baseline_brightness_medium_24"
                 android:drawablePadding="@dimen/padding_10"
                 android:drawableTint="@color/gray_700"
+                android:visibility="gone"
                 android:elevation="2dp"
                 android:paddingHorizontal="@dimen/fab_padding"
                 android:paddingVertical="@dimen/fab_padding"
